<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="137dp"
        android:layout_height="116dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/wifi2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/WifiTestTitle"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/allbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/AllTest" />

    <Button
        android:id="@+id/agingbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/AgingTest" />

    <Button
        android:id="@+id/configbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/TestConfig" />
    
    <Button
        android:id="@+id/additionalbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/AdditionalTest" />
</LinearLayout>